@@ -7,6 +7,8 @@
 
 package io.harness.iacm.creator.variables;
 
+import static io.harness.pms.yaml.YAMLFieldNameConstants.STRATEGY;
+
 import io.harness.annotations.dev.HarnessTeam;
 import io.harness.annotations.dev.OwnedBy;
 import io.harness.beans.stages.IACMStageNode;
@@ -31,6 +33,7 @@ import java.util.Set;
 /*
 This class is the one used for autocompletion
 If it will be called if the pipeline contains variables and this resolves those variables.
+Note: Seems that there is no change for the v1 yaml update here
  */
 @OwnedBy(HarnessTeam.IACM)
 public class IACMStageVariableCreator extends AbstractStageVariableCreator<IACMStageNode> {
@@ -50,11 +53,15 @@ public class IACMStageVariableCreator extends AbstractStageVariableCreator<IACMS
               .build());
     }
 
-    YamlField variablesField = config.getNode().getField(YAMLFieldNameConstants.VARIABLES);
-    if (variablesField != null) {
-      VariableCreationResponse variablesResponse =
-          VariableCreatorHelper.createVariableResponseForVariables(variablesField, YAMLFieldNameConstants.STAGE);
-      responseMap.put(variablesField.getNode().getUuid(), variablesResponse);
+    YamlField strategyField = config.getNode().getField(STRATEGY);
+
+    if (strategyField != null) {
+      Map<String, YamlField> strategyDependencyMap = new HashMap<>();
+      strategyDependencyMap.put(strategyField.getNode().getUuid(), strategyField);
+      responseMap.put(strategyField.getNode().getUuid(),
+          VariableCreationResponse.builder()
+              .dependencies(DependenciesUtils.toDependenciesProto(strategyDependencyMap))
+              .build());
     }
 
     return responseMap;
@@ -96,8 +103,8 @@ public class IACMStageVariableCreator extends AbstractStageVariableCreator<IACMS
 
   @Override
   public Map<String, Set<String>> getSupportedTypes() {
-    return Collections.singletonMap(
-        YAMLFieldNameConstants.STAGE, Collections.singleton(IACMStepSpecTypeConstants.IACM_STAGE));
+    return Collections.singletonMap(YAMLFieldNameConstants.STAGE,
+        Set.of(IACMStepSpecTypeConstants.IACM_STAGE, IACMStepSpecTypeConstants.IACM_STAGE_V1));
   }
 
   @Override
