@@ -41,6 +41,7 @@ import io.harness.beans.ExecutionStatus;
 import io.harness.beans.FeatureName;
 import io.harness.category.element.UnitTests;
 import io.harness.delegate.beans.DelegateTaskDetails;
+import io.harness.delegate.utils.DelegateTaskMigrationHelper;
 import io.harness.exception.InvalidRequestException;
 import io.harness.exception.ServiceNowException;
 import io.harness.ff.FeatureFlagService;
@@ -65,6 +66,8 @@ import software.wings.sm.ExecutionContextImpl;
 import software.wings.sm.ExecutionResponse;
 
 import java.util.Collections;
+import java.util.HashMap;
+import java.util.Map;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.experimental.categories.Category;
@@ -86,6 +89,7 @@ public class ServiceNowCreateUpdateStateTest extends CategoryTest {
   @Mock SweepingOutputService sweepingOutputService;
   @Mock StateExecutionService stateExecutionService;
   @Mock FeatureFlagService featureFlagService;
+  @Mock private DelegateTaskMigrationHelper delegateTaskMigrationHelper;
   @InjectMocks ServiceNowCreateUpdateState serviceNowCreateUpdateState = new ServiceNowCreateUpdateState(STATE_NAME);
 
   @Before
@@ -110,7 +114,7 @@ public class ServiceNowCreateUpdateStateTest extends CategoryTest {
     when(secretManager.getEncryptionDetails(
              ServiceNowConfig.builder().password(PASSWORD).build(), APP_ID, WORKFLOW_EXECUTION_ID))
         .thenReturn(Collections.emptyList());
-    when(delegateService.queueTask(any(DelegateTask.class))).thenReturn(UUID);
+    when(delegateService.queueTaskV2(any(DelegateTask.class))).thenReturn(UUID);
     when(featureFlagService.isEnabled(eq(FeatureName.HONOR_DELEGATE_SCOPING), anyString())).thenReturn(true);
   }
 
@@ -122,7 +126,7 @@ public class ServiceNowCreateUpdateStateTest extends CategoryTest {
     ExecutionResponse executionResponse = serviceNowCreateUpdateState.execute(context);
 
     ArgumentCaptor<DelegateTask> delegateTaskArgumentCaptor = ArgumentCaptor.forClass(DelegateTask.class);
-    verify(delegateService).queueTask(delegateTaskArgumentCaptor.capture());
+    verify(delegateService).queueTaskV2(delegateTaskArgumentCaptor.capture());
     assertThat(delegateTaskArgumentCaptor.getValue())
         .isNotNull()
         .hasFieldOrPropertyWithValue("data.taskType", SERVICENOW_ASYNC.name());
@@ -218,7 +222,7 @@ public class ServiceNowCreateUpdateStateTest extends CategoryTest {
     params.setTicketType(INCIDENT.name());
     params.setUpdateMultiple(true);
     params.setFields(Collections.singletonMap(ServiceNowFields.DESCRIPTION, DESCRIPTION_VALUE));
-    params.setAdditionalFields(Collections.singletonMap("key", "value"));
+    params.setAdditionalFields(new HashMap<>(Map.of("key", "value")));
     params.setImportSetTableName(VARIABLE_NAME);
     params.setJsonBody("{\"key\": \"value\"}");
     return params;
@@ -233,7 +237,7 @@ public class ServiceNowCreateUpdateStateTest extends CategoryTest {
     ExecutionResponse executionResponse = serviceNowCreateUpdateState.execute(context);
 
     ArgumentCaptor<DelegateTask> delegateTaskArgumentCaptor = ArgumentCaptor.forClass(DelegateTask.class);
-    verify(delegateService).queueTask(delegateTaskArgumentCaptor.capture());
+    verify(delegateService).queueTaskV2(delegateTaskArgumentCaptor.capture());
     assertThat(delegateTaskArgumentCaptor.getValue())
         .isNotNull()
         .hasFieldOrPropertyWithValue("setupAbstractions.envType", "PROD");
