@@ -35,6 +35,7 @@ import io.harness.cvng.analysis.entities.DeploymentTimeSeriesAnalysis;
 import io.harness.cvng.analysis.services.api.DeploymentTimeSeriesAnalysisService;
 import io.harness.cvng.cdng.beans.v2.AnalysisReason;
 import io.harness.cvng.cdng.beans.v2.AnalysisResult;
+import io.harness.cvng.cdng.beans.v2.AppliedDeploymentAnalysisType;
 import io.harness.cvng.cdng.beans.v2.ControlDataType;
 import io.harness.cvng.cdng.beans.v2.MetricType;
 import io.harness.cvng.cdng.beans.v2.MetricsAnalysis;
@@ -42,6 +43,7 @@ import io.harness.cvng.client.NextGenService;
 import io.harness.cvng.core.beans.params.PageParams;
 import io.harness.cvng.core.beans.params.ProjectParams;
 import io.harness.cvng.core.beans.params.filterParams.DeploymentTimeSeriesAnalysisFilter;
+import io.harness.cvng.core.entities.AppDynamicsCVConfig;
 import io.harness.cvng.core.entities.CVConfig;
 import io.harness.cvng.core.services.api.CVConfigService;
 import io.harness.cvng.core.services.api.TimeSeriesRecordService;
@@ -999,7 +1001,8 @@ public class DeploymentTimeSeriesAnalysisServiceImplTest extends CvNextGenTestBa
   @Category(UnitTests.class)
   public void testGetFilteredMetricAnalysesForVerifyStepExecutionId() {
     timeSeriesRecordDtos = getTimeSeriesRecordDtos();
-    when(mockedTimeSeriesRecordService.getTimeSeriesRecordDTOs(any(), any(), any())).thenReturn(timeSeriesRecordDtos);
+    when(mockedTimeSeriesRecordService.getDeploymentMetricTimeSeriesRecordDTOs(any(), any(), any(), any()))
+        .thenReturn(timeSeriesRecordDtos);
 
     VerificationJobInstance verificationJobInstance = createVerificationJobInstance();
     CVConfig cvConfig = verificationJobInstance.getResolvedJob()
@@ -1008,11 +1011,15 @@ public class DeploymentTimeSeriesAnalysisServiceImplTest extends CvNextGenTestBa
                             .filter(cvConfig1 -> cvConfig1.getVerificationType() == VerificationType.TIME_SERIES)
                             .collect(Collectors.toList())
                             .get(0);
+    AppDynamicsCVConfig metricCVConfig = (AppDynamicsCVConfig) cvConfig;
+    metricCVConfig.setGroupName("txn");
     String verificationJobInstanceId = verificationJobInstanceService.create(verificationJobInstance);
     String verificationTaskId = verificationTaskService.createDeploymentVerificationTask(
         accountId, cvConfig.getUuid(), verificationJobInstanceId, cvConfig.getType());
 
     deploymentTimeSeriesAnalysisService.save(createDeploymentMetricAnalysis(verificationTaskId));
+    verificationJobInstanceService.updateAppliedDeploymentAnalysisTypeForVerificationTaskId(
+        verificationJobInstance.getUuid(), verificationTaskId, AppliedDeploymentAnalysisType.CANARY);
     DeploymentTimeSeriesAnalysisFilter deploymentTimeSeriesAnalysisFilter =
         DeploymentTimeSeriesAnalysisFilter.builder().build();
     List<MetricsAnalysis> metricsAnalyses =
@@ -1022,44 +1029,79 @@ public class DeploymentTimeSeriesAnalysisServiceImplTest extends CvNextGenTestBa
     assertThat(metricsAnalyses.get(0).getMetricName()).isEqualTo("name");
     assertThat(metricsAnalyses.get(0).getMetricIdentifier()).isEqualTo("identifier");
     assertThat(metricsAnalyses.get(0).getTransactionGroup()).isEqualTo("txn");
-    assertThat(metricsAnalyses.get(0).getHealthSourceIdentifier()).isEqualTo(cvConfig.getFullyQualifiedIdentifier());
+    assertThat(metricsAnalyses.get(0).getHealthSource().getIdentifier())
+        .isEqualTo(cvConfig.getFullyQualifiedIdentifier());
     assertThat(metricsAnalyses.get(0).getAnalysisResult()).isEqualTo(AnalysisResult.UNHEALTHY);
     assertThat(metricsAnalyses.get(0).getMetricType()).isEqualTo(MetricType.PERFORMANCE_OTHER);
-    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getAnalysisResult())
-        .isEqualTo(AnalysisResult.NO_ANALYSIS);
-    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getAnalysisReason())
-        .isEqualTo(AnalysisReason.NO_CONTROL_DATA);
-    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getAppliedThresholds()).contains("thresholdId");
-    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getControlNodeIdentifier()).isNull();
-    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getControlDataType())
-        .isEqualTo(ControlDataType.AVERAGE);
-    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getNormalisedControlData()).hasSize(1);
-    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getNormalisedTestData()).hasSize(1);
-
-    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getTestData()).hasSize(1);
-    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getTestData().get(0).getValue()).isEqualTo(22.0);
-    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getTestData().get(0).getTimestamp()).isEqualTo(33L);
-
     assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getAnalysisResult())
-        .isEqualTo(AnalysisResult.UNHEALTHY);
+        .isEqualTo(AnalysisResult.NO_ANALYSIS);
     assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getAnalysisReason())
-        .isEqualTo(AnalysisReason.ML_ANALYSIS);
-    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getAppliedThresholds()).isNull();
-    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getControlNodeIdentifier()).isNull();
-    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getControlDataType())
-        .isEqualTo(ControlDataType.AVERAGE);
+        .isEqualTo(AnalysisReason.NO_CONTROL_DATA);
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getAppliedThresholds()).contains("thresholdId");
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getControlNodeIdentifier()).isEqualTo("node3");
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getControlDataType()).isNull();
     assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getNormalisedControlData()).hasSize(1);
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getNormalisedControlData().get(0).getValue())
+        .isEqualTo(1.0);
+    assertThat(
+        metricsAnalyses.get(0).getTestDataNodes().get(1).getNormalisedControlData().get(0).getTimestampInMillis())
+        .isEqualTo(1587549810000L);
+
     assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getNormalisedTestData()).hasSize(1);
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getNormalisedTestData().get(0).getValue())
+        .isEqualTo(1.0);
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getNormalisedTestData().get(0).getTimestampInMillis())
+        .isEqualTo(1587549810000L);
 
     assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getTestData()).hasSize(1);
-    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getTestData().get(0).getValue()).isEqualTo(2332.0);
-    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getTestData().get(0).getTimestamp()).isEqualTo(4433L);
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getTestData().get(0).getValue()).isEqualTo(22.0);
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getTestData().get(0).getTimestampInMillis())
+        .isEqualTo(1980000);
+
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getControlData()).hasSize(1);
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getControlData().get(0).getValue()).isEqualTo(9.0);
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(1).getControlData().get(0).getTimestampInMillis())
+        .isEqualTo(14040000);
+
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getAnalysisResult())
+        .isEqualTo(AnalysisResult.UNHEALTHY);
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getAnalysisReason())
+        .isEqualTo(AnalysisReason.ML_ANALYSIS);
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getAppliedThresholds()).isNull();
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getControlNodeIdentifier()).isEqualTo("node3");
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getControlDataType())
+        .isEqualTo(ControlDataType.MINIMUM_DEVIATION);
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getNormalisedControlData()).hasSize(1);
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getNormalisedControlData().get(0).getValue())
+        .isEqualTo(1.0);
+    assertThat(
+        metricsAnalyses.get(0).getTestDataNodes().get(0).getNormalisedControlData().get(0).getTimestampInMillis())
+        .isEqualTo(1587549810000L);
+
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getNormalisedTestData()).hasSize(1);
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getNormalisedTestData().get(0).getValue())
+        .isEqualTo(1.0);
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getNormalisedTestData().get(0).getTimestampInMillis())
+        .isEqualTo(1587549810000L);
+
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getTestData()).hasSize(1);
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getTestData().get(0).getValue()).isEqualTo(2332.0);
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getTestData().get(0).getTimestampInMillis())
+        .isEqualTo(265980000);
+
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getControlData()).hasSize(1);
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getControlData().get(0).getValue()).isEqualTo(9.0);
+    assertThat(metricsAnalyses.get(0).getTestDataNodes().get(0).getControlData().get(0).getTimestampInMillis())
+        .isEqualTo(14040000);
   }
 
   @Test
   @Owner(developers = DHRUVX)
   @Category(UnitTests.class)
   public void testGetFilteredMetricAnalysesForVerifyStepExecutionId_filteredNodeNames() {
+    timeSeriesRecordDtos = getTimeSeriesRecordDtos();
+    when(mockedTimeSeriesRecordService.getDeploymentMetricTimeSeriesRecordDTOs(any(), any(), any(), any()))
+        .thenReturn(timeSeriesRecordDtos);
     VerificationJobInstance verificationJobInstance = createVerificationJobInstance();
     CVConfig cvConfig = verificationJobInstance.getResolvedJob()
                             .getCvConfigs()
@@ -1067,12 +1109,15 @@ public class DeploymentTimeSeriesAnalysisServiceImplTest extends CvNextGenTestBa
                             .filter(cvConfig1 -> cvConfig1.getVerificationType() == VerificationType.TIME_SERIES)
                             .collect(Collectors.toList())
                             .get(0);
+    AppDynamicsCVConfig metricCVConfig = (AppDynamicsCVConfig) cvConfig;
+    metricCVConfig.setGroupName("txn");
     String verificationJobInstanceId = verificationJobInstanceService.create(verificationJobInstance);
     String verificationTaskId = verificationTaskService.createDeploymentVerificationTask(
         accountId, cvConfig.getUuid(), verificationJobInstanceId, cvConfig.getType());
 
     deploymentTimeSeriesAnalysisService.save(createDeploymentMetricAnalysis(verificationTaskId));
-
+    verificationJobInstanceService.updateAppliedDeploymentAnalysisTypeForVerificationTaskId(
+        verificationJobInstance.getUuid(), verificationTaskId, AppliedDeploymentAnalysisType.CANARY);
     DeploymentTimeSeriesAnalysisFilter deploymentTimeSeriesAnalysisFilter =
         DeploymentTimeSeriesAnalysisFilter.builder().hostNames(List.of("node1")).build();
     List<MetricsAnalysis> metricsAnalyses =
@@ -1082,7 +1127,8 @@ public class DeploymentTimeSeriesAnalysisServiceImplTest extends CvNextGenTestBa
     assertThat(metricsAnalyses.get(0).getMetricName()).isEqualTo("name");
     assertThat(metricsAnalyses.get(0).getMetricIdentifier()).isNotBlank();
     assertThat(metricsAnalyses.get(0).getTransactionGroup()).isEqualTo("txn");
-    assertThat(metricsAnalyses.get(0).getHealthSourceIdentifier()).isEqualTo(cvConfig.getFullyQualifiedIdentifier());
+    assertThat(metricsAnalyses.get(0).getHealthSource().getIdentifier())
+        .isEqualTo(cvConfig.getFullyQualifiedIdentifier());
     assertThat(metricsAnalyses.get(0).getAnalysisResult()).isEqualTo(AnalysisResult.UNHEALTHY);
     assertThat(metricsAnalyses.get(0).getMetricType()).isEqualTo(MetricType.PERFORMANCE_OTHER);
     assertThat(metricsAnalyses.get(0).getTestDataNodes()).hasSize(1);
@@ -1093,6 +1139,9 @@ public class DeploymentTimeSeriesAnalysisServiceImplTest extends CvNextGenTestBa
   @Owner(developers = DHRUVX)
   @Category(UnitTests.class)
   public void testGetFilteredMetricAnalysesForVerifyStepExecutionId_filteredAnalysisResult() {
+    timeSeriesRecordDtos = getTimeSeriesRecordDtos();
+    when(mockedTimeSeriesRecordService.getDeploymentMetricTimeSeriesRecordDTOs(any(), any(), any(), any()))
+        .thenReturn(timeSeriesRecordDtos);
     VerificationJobInstance verificationJobInstance = createVerificationJobInstance();
     CVConfig cvConfig = verificationJobInstance.getResolvedJob()
                             .getCvConfigs()
@@ -1100,12 +1149,15 @@ public class DeploymentTimeSeriesAnalysisServiceImplTest extends CvNextGenTestBa
                             .filter(cvConfig1 -> cvConfig1.getVerificationType() == VerificationType.TIME_SERIES)
                             .collect(Collectors.toList())
                             .get(0);
+    AppDynamicsCVConfig metricCVConfig = (AppDynamicsCVConfig) cvConfig;
+    metricCVConfig.setGroupName("txn");
     String verificationJobInstanceId = verificationJobInstanceService.create(verificationJobInstance);
     String verificationTaskId = verificationTaskService.createDeploymentVerificationTask(
         accountId, cvConfig.getUuid(), verificationJobInstanceId, cvConfig.getType());
 
     deploymentTimeSeriesAnalysisService.save(createDeploymentMetricAnalysis(verificationTaskId));
-
+    verificationJobInstanceService.updateAppliedDeploymentAnalysisTypeForVerificationTaskId(
+        verificationJobInstance.getUuid(), verificationTaskId, AppliedDeploymentAnalysisType.CANARY);
     DeploymentTimeSeriesAnalysisFilter deploymentTimeSeriesAnalysisFilter =
         DeploymentTimeSeriesAnalysisFilter.builder().anomalousNodesOnly(true).anomalousMetricsOnly(true).build();
     List<MetricsAnalysis> metricsAnalyses =
@@ -1115,7 +1167,8 @@ public class DeploymentTimeSeriesAnalysisServiceImplTest extends CvNextGenTestBa
     assertThat(metricsAnalyses.get(0).getMetricName()).isEqualTo("name");
     assertThat(metricsAnalyses.get(0).getMetricIdentifier()).isNotBlank();
     assertThat(metricsAnalyses.get(0).getTransactionGroup()).isEqualTo("txn");
-    assertThat(metricsAnalyses.get(0).getHealthSourceIdentifier()).isEqualTo(cvConfig.getFullyQualifiedIdentifier());
+    assertThat(metricsAnalyses.get(0).getHealthSource().getIdentifier())
+        .isEqualTo(cvConfig.getFullyQualifiedIdentifier());
     assertThat(metricsAnalyses.get(0).getAnalysisResult()).isEqualTo(AnalysisResult.UNHEALTHY);
     assertThat(metricsAnalyses.get(0).getMetricType()).isEqualTo(MetricType.PERFORMANCE_OTHER);
     assertThat(metricsAnalyses.get(0).getTestDataNodes()).hasSize(1);
@@ -1133,12 +1186,15 @@ public class DeploymentTimeSeriesAnalysisServiceImplTest extends CvNextGenTestBa
                             .filter(cvConfig1 -> cvConfig1.getVerificationType() == VerificationType.TIME_SERIES)
                             .collect(Collectors.toList())
                             .get(0);
+    AppDynamicsCVConfig metricCVConfig = (AppDynamicsCVConfig) cvConfig;
+    metricCVConfig.setGroupName("node2");
     String verificationJobInstanceId = verificationJobInstanceService.create(verificationJobInstance);
     String verificationTaskId = verificationTaskService.createDeploymentVerificationTask(
         accountId, cvConfig.getUuid(), verificationJobInstanceId, cvConfig.getType());
 
     deploymentTimeSeriesAnalysisService.save(createDeploymentMetricAnalysis(verificationTaskId));
-
+    verificationJobInstanceService.updateAppliedDeploymentAnalysisTypeForVerificationTaskId(
+        verificationJobInstance.getUuid(), verificationTaskId, AppliedDeploymentAnalysisType.CANARY);
     DeploymentTimeSeriesAnalysisFilter deploymentTimeSeriesAnalysisFilter =
         DeploymentTimeSeriesAnalysisFilter.builder().transactionNames(List.of("node1")).build();
     List<MetricsAnalysis> metricsAnalyses =
@@ -1171,6 +1227,11 @@ public class DeploymentTimeSeriesAnalysisServiceImplTest extends CvNextGenTestBa
 
   private DeploymentTimeSeriesAnalysisDTO.HostData createHostData(String hostName, int risk, Double score,
       List<Double> controlData, List<Double> testData, List<String> appliedThresholdIds) {
+    return createHostData(hostName, risk, score, controlData, testData, appliedThresholdIds, null);
+  }
+
+  private DeploymentTimeSeriesAnalysisDTO.HostData createHostData(String hostName, int risk, Double score,
+      List<Double> controlData, List<Double> testData, List<String> appliedThresholdIds, String controlNode) {
     return DeploymentTimeSeriesAnalysisDTO.HostData.builder()
         .hostName(hostName)
         .risk(risk)
@@ -1178,6 +1239,7 @@ public class DeploymentTimeSeriesAnalysisServiceImplTest extends CvNextGenTestBa
         .controlData(controlData)
         .testData(testData)
         .appliedThresholdIds(appliedThresholdIds)
+        .nearestControlHost(controlNode)
         .build();
   }
 
@@ -1251,10 +1313,12 @@ public class DeploymentTimeSeriesAnalysisServiceImplTest extends CvNextGenTestBa
   private DeploymentTimeSeriesAnalysis createDeploymentMetricAnalysis(String verificationTaskId) {
     DeploymentTimeSeriesAnalysisDTO.HostInfo hostInfo1 = createHostInfo("node1", -1, 0.0, false, true);
     DeploymentTimeSeriesAnalysisDTO.HostInfo hostInfo2 = createHostInfo("node2", 2, 2.2, false, true);
+    DeploymentTimeSeriesAnalysisDTO.HostInfo hostInfo3 = createHostInfo("node3", 2, 2.2, true, false);
 
     DeploymentTimeSeriesAnalysisDTO.HostData hostData1 =
-        createHostData("node1", -1, 0.0, List.of(1D), List.of(1D), List.of("thresholdId"));
-    DeploymentTimeSeriesAnalysisDTO.HostData hostData2 = createHostData("node2", 2, 2.0, List.of(1D), List.of(1D));
+        createHostData("node1", -1, 0.0, List.of(1D), List.of(1D), List.of("thresholdId"), "node3");
+    DeploymentTimeSeriesAnalysisDTO.HostData hostData2 =
+        createHostData("node2", 2, 2.0, List.of(1D), List.of(1D), Collections.emptyList(), "node3");
     DeploymentTimeSeriesAnalysisDTO.TransactionMetricHostData transactionMetricHostData1 =
         createTransactionMetricHostData("txn", "identifier", 2, 0.5, Arrays.asList(hostData1, hostData2));
 
@@ -1264,7 +1328,7 @@ public class DeploymentTimeSeriesAnalysisServiceImplTest extends CvNextGenTestBa
         .risk(Risk.UNHEALTHY)
         .verificationTaskId(verificationTaskId)
         .transactionMetricSummaries(List.of(transactionMetricHostData1))
-        .hostSummaries(Arrays.asList(hostInfo1, hostInfo2))
+        .hostSummaries(Arrays.asList(hostInfo1, hostInfo2, hostInfo3))
         .startTime(Instant.now())
         .endTime(Instant.now().plus(1, ChronoUnit.MINUTES))
         .build();
@@ -1282,12 +1346,21 @@ public class DeploymentTimeSeriesAnalysisServiceImplTest extends CvNextGenTestBa
                                  .metricValue(22.0)
                                  .epochMinute(33L)
                                  .host("node1")
+                                 .groupName("txn")
                                  .build());
     timeSeriesRecordDtos.add(TimeSeriesRecordDTO.builder()
                                  .metricIdentifier("identifier")
                                  .metricValue(2332.0)
                                  .epochMinute(4433L)
                                  .host("node2")
+                                 .groupName("txn")
+                                 .build());
+    timeSeriesRecordDtos.add(TimeSeriesRecordDTO.builder()
+                                 .metricIdentifier("identifier")
+                                 .metricValue(9.0)
+                                 .epochMinute(234L)
+                                 .host("node3")
+                                 .groupName("txn")
                                  .build());
     return timeSeriesRecordDtos;
   }
